--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		</ul>
 		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
 		<ul>
-			<li>Postdoctoral Researcher, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2019-now</li>			
-			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, Seoul National University, South Korea, 2018-2019</li>			
+			<li>Postdoctoral Researcher, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2019-now</li>
+			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, Seoul National University, South Korea, 2018-2019</li>
 		</ul>
 		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
 		<ul>
@@ -54,8 +54,8 @@
 			<!--Submitted-->
 			<li>HuiQiang Shen, Jong Hun Woo, SuHeon Ju, <b>Yong-Kuk Jeong</b>, Dong Kun Lee and Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Development of simulation-based planning and scheduling system for middle-sized shipbuilding companies</span>, International Journal of Production Research</li>
 			<!--Submitted-->
-			<li>Byeongseop Kim, <b>Yongkuk Jeong</b> and Jong Gye Shin, (Available online), <span style="color:#1d6ab8">Spatial arrangement using deep reinforcement learning to minimise rearrangement in ship block stockyards</span>, International Journal of Production Research <a href="https://doi.org/10.1080/00207543.2020.1748247">[Link: Paper]</a></li>					
-			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo and Cheolho Ryu, (Available online), <span style="color:#1d6ab8">Model-based Computational Shipyard Dynamics and its Applications</span>, Journal of Ship Production and Design <a href="https://doi.org/10.5957/JSPD.01190001">[Link: Paper]</a></li>
+			<li>Byeongseop Kim, <b>Yongkuk Jeong</b> and Jong Gye Shin, (Available online), <span style="color:#1d6ab8">Spatial arrangement using deep reinforcement learning to minimise rearrangement in ship block stockyards</span>, International Journal of Production Research <a href="https://doi.org/10.1080/00207543.2020.1748247">[Link: Paper]</a></li>
+			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo and Cheolho Ryu, (2020), <span style="color:#1d6ab8">Model-based Computational Shipyard Dynamics and its Applications</span>, Journal of Ship Production and Design, 36(1), pp. 87-95 <a href="http://dx.doi.org/10.5957/jspd.2020.36.1.87">[Link: Paper]</a></li>
 			<li>Suheon Ju, Saenal Sung, Huiqiang Shen, <b>Yong-Kuk Jeong</b> and Jong-Gye Shin, (2020), <span style="color:#1d6ab8">System development for establishing shipyard mid-term production plans using backward process-centric simulation</span>, International Journal of Naval Architecture and Ocean Engineering, 12, pp. 20-37 <a href="https://doi.org/10.1016/j.ijnaoe.2019.05.005">[Link: Paper]</a></li>
 			<li>Masoud Zafarzadeh, Magnus Wiktorsson, Jannicke Baalsrud Hauge and <b>Yongkuk Jeong</b> (2019), <span style="color:#1d6ab8">Data-Driven Production Logistics - An Industrial Case Study on Potential and Challenges</span>, Smart and Sustainable Manufacturing Systems, 3(1), pp. 53-78 <a href="https://doi.org/10.1520/SSMS20190048">[Link: Paper]</a></li>
 			<li><b>Yong-Kuk Jeong</b>, Youngmin Kim, Su Heon Ju, Jong-Gye Shin, Jong-Choel Kim and Jong Hun Woo, (2019), <span style="color:#1d6ab8">A Spatial Layout Optimization Program considering the Survivability of a Naval Vessel in the Early Design Stage</span>, Journal of Ship Production and Design, 35(2), pp. 126-138 <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd_170036;jsessionid=1edv0v96e8s3f.x-ic-live-01">[Link: Paper]</a></li>
