--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="icon" href="img/icon.png" alt="Yongkuk Jeong"/>
   </head>
   <body oncontextmenu="return false">
     <section class="page-header">
 		<h1 class="project-name">Yongkuk Jeong</h1>
 		<h2 class="project-tagline">yongkuk at kth.se</h2>
-		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk Jeong"/>
+		<img src="img/YKJeong.png" width="150" alt="Yongkuk Jeong"/>
 		<h2 class="project-tagline">Postdoctoral Researcher<br>Dept. of Sustainable Production Development<br>KTH Royal Institute of Technology, Sweden</h2>
     </section>
     <section class="main-content">
