--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 		</ul>
 		<h3><a id="conference-international" class="anchor" href="#conference-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (International)</h3>
 		<ul>
+      <!--WSC 2020, SPS 2020, PLAN 2020 -->
+      
+      <li>Jo Wessel Strandhagen, <b>Yongkuk Jeong</b>, Jong Hun Woo, Marco Semini, Magnus Wiktorsson, Jan Ola Strandhagen, and Erlend Alfnes (2020), <span style="color:#1d6ab8">Factors Affecting Shipyard Operations and Logistics: A Framework and Comparison of Shipbuilding Approaches</span>, APMS 2020, Novi Sad, Serbia, 30 Auguest - 3 September, 2020</li>
+      <li>Jannicke Baalsrud Hauge, Masoud Zafarzadeh, <b>Yongkuk Jeong</b>, Yi Li, Wajid Ali Khilji, and Magnus Wiktorsson (2020), <span style="color:#1d6ab8">Factors Affecting Shipyard Operations and Logistics: A Framework and Comparison of Shipbuilding Approaches</span>, APMS 2020, Novi Sad, Serbia, 30 Auguest - 3 September, 2020</li>
+
 			<li>Jong Gye Shin, Youngmin Kim, Jong Hun Woo, Seunghyeok Son, Huiqiang Shen, Byeong-seop Kim, Cheolho Ryu, and <b>Yong-Kuk Jeong</b> (2019), <span style="color:#1d6ab8">Smart Shipyard Platform with Computational Shipyard Dynamics and its Application to Forming Shop</span>, SNAME Maritime Convention 2019, Tacoma, WA, 30 October - 1 November, 2019</li>
 			<li><b>Yong-Kuk Jeong</b> and Magnus Wiktorsson (2019), <span style="color:#1d6ab8">Process-Centric versus Resource-Centric Modelling: Initial findings and future research directions</span>, i3CDE 2019, Penang, Malaysia, 8-10 July, 2019</li>
 			<li><b>Yong-Kuk Jeong</b>, Huiqiang Shen, Youngmin Kim, Young-Ki Min, Jong Gye Shin, Philippe Lee, Jong Hun Woo, Yong Gil Lee (2019), <span style="color:#1d6ab8">Discrete Event Simulation for Strategic Shipyard Planning</span>, COMPIT 2019, Tullamore, Ireland, 25-27 March, 2019</li>
