--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (International)</h3>
 		<ul>
-			<!--Submitted-->
-			<li>HuiQiang Shen, Jong Hun Woo, SuHeon Ju, <b>Yong-Kuk Jeong</b>, Dong Kun Lee and Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Development of simulation-based planning and scheduling system for middle-sized shipbuilding companies</span>, International Journal of Production Research</li>
-			<!--Submitted-->
+      <!--<li>HuiQiang Shen, Jong Hun Woo, SuHeon Ju, <b>Yong-Kuk Jeong</b>, Dong Kun Lee and Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Development of simulation-based planning and scheduling system for middle-sized shipbuilding companies</span>, International Journal of Production Research</li>Submitted-->
 			<li>Byeongseop Kim, <b>Yongkuk Jeong</b> and Jong Gye Shin, (2020), <span style="color:#1d6ab8">Spatial arrangement using deep reinforcement learning to minimise rearrangement in ship block stockyards</span>, International Journal of Production Research, 58(16), pp. 5062-5076 <a href="https://doi.org/10.1080/00207543.2020.1748247">[Link: Paper]</a></li>
 			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo and Cheolho Ryu, (2020), <span style="color:#1d6ab8">Model-based Computational Shipyard Dynamics and its Applications</span>, Journal of Ship Production and Design, 36(1), pp. 87-95 <a href="http://dx.doi.org/10.5957/jspd.2020.36.1.87">[Link: Paper]</a></li>
 			<li>Suheon Ju, Saenal Sung, Huiqiang Shen, <b>Yong-Kuk Jeong</b> and Jong-Gye Shin, (2020), <span style="color:#1d6ab8">System development for establishing shipyard mid-term production plans using backward process-centric simulation</span>, International Journal of Naval Architecture and Ocean Engineering, 12, pp. 20-37 <a href="https://doi.org/10.1016/j.ijnaoe.2019.05.005">[Link: Paper]</a></li>
