--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 		</ul>
 		<h3><a id="awards-and-honors" class="anchor" href="#awards-and-honors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards and Honors</h3>
 		<ul>
-			<li>Oct 2019, The Elmer L. Hann Award, Best Paper on Ship Production Delivered at the Ship Production Symposium, SNAME <a href="https://www.sname.org/recognition/awards/elmerlhannaward">[LINK]</a></li>
+			<li>Oct 2019, The Elmer L. Hann Award, Best Paper on Ship Production Delivered at the Ship Production Symposium, SNAME <a href="https://www.sname.org/elmer-l-hann-award">[LINK]</a></li>
 			<li>Mar 2012 - Aug 2013, STX Foundation</li>
 			<li>Nov 2012, Encouragement Award, Korean Institute of Industrial Engineers</li>
 			<li>Feb 2011, The Society of Naval Architects of Korea</li>
