--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1 class="project-name">Yongkuk Jeong</h1>
 		<h2 class="project-tagline">yongkuk at kth.se</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yongkuk Jeong"/>
-		<h2 class="project-tagline">Postdoc<br>Dept. of Sustainable Production Development<br>KTH Royal Institute of Technology, Sweden</h2>
+		<h2 class="project-tagline">Assistant Professor<br>Dept. of Sustainable Production Development<br>KTH Royal Institute of Technology, Sweden</h2>
     </section>
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
@@ -28,7 +28,8 @@
 		</ul>
 		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
 		<ul>
-			<li>Postdoc, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2019-now</li>
+      <li>Assistant Professor, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2021-now</li>
+      <li>Postdoc, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2019-2021</li>
 			<li>Postdoctoral Researcher, Research Institute of Marine Systems Engineering, Seoul National University, South Korea, 2018-2019</li>
 		</ul>
 		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
