--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<li>ORCID ID <a href="https://orcid.org/0000-0003-1878-773X">[LINK]</a></li>
 			<li>Curriculum Vitae <a href="docs/Public_CV_Yongkuk Jeong_KTH.pdf">[LINK]</a></li>
 		</ul>
-		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
+		<h3><a id="employment" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Employment</h3>
 		<ul>
       <li>Assistant Professor, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2021-now</li>
       <li>Postdoc, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2019-2021</li>
