--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications (International)</h3>
 		<ul>
+      <li>2021</li>
+        <ul>
+          <li>Jong Hun Woo, Haoyu Zhu, Dong Kun Lee, Hyun Chung, and <b>YongKuk Jeong</b> (2021), <span style="color:#1d6ab8">Assessment Framework of Smart Shipyard Maturity Level via Data Envelopment Analysis</span>, Sustainability, 13(4)  <a href="https://doi.org/10.3390/su13041964">[Link: Paper]</a></li>
+			  </ul>
       <li>2020</li>
         <ul>
           <li>Huiqiang Shen, Yonggil Lee, <b>Yong-Kuk Jeong</b>, and Jong Hun Woo (2020), <span style="color:#1d6ab8">Analysis on Hull Block Erection Process Considering Variability</span>, Journal of Ship Production and Design (Available online) <a href="https://www.onepetro.org/journal-paper/SNAME-JSPD-07190036">[Link: Paper]</a></li>
