--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<ul>
       <li>2021</li>
         <ul>
-          <li>Jong Hun Woo, Haoyu Zhu, Dong Kun Lee, Hyun Chung, and <b>YongKuk Jeong</b> (2021), <span style="color:#1d6ab8">Assessment Framework of Smart Shipyard Maturity Level via Data Envelopment Analysis</span>, Sustainability, 13(4)  <a href="https://doi.org/10.3390/su13041964">[Link: Paper]</a></li>
+          <li>Jong Hun Woo, Haoyu Zhu, Dong Kun Lee, Hyun Chung, and <b>Yongkuk Jeong</b> (2021), <span style="color:#1d6ab8">Assessment Framework of Smart Shipyard Maturity Level via Data Envelopment Analysis</span>, Sustainability, 13(4)  <a href="https://doi.org/10.3390/su13041964">[Link: Paper]</a></li>
 			  </ul>
       <li>2020</li>
         <ul>
