--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		</ul>
 		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
 		<ul>
+      <li>Course Responsible & Teacher (ML2303 Digitalisation in Sustainable Production), KTH Royal Institute of Technology, Sweden, 2021</li>
       <li>Course Responsible & Teacher (ML2302 Modelling, Simulation and Optimization of Sustainable Production), KTH Royal Institute of Technology, Sweden, 2021</li>
       <li>Teacher (ML2303 Digitalisation in Sustainable Production), KTH Royal Institute of Technology, Sweden, 2020</li>
       <li>Teacher (ML2302 Modelling, Simulation and Optimization of Sustainable Production), KTH Royal Institute of Technology, Sweden, 2020</li>
@@ -54,10 +55,11 @@
 			<li>Life cycle assessment</li>
 			<li>Combinatorial optimization algorithm</li>
 		</ul>
-		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications (International)</h3>
+		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
 		<ul>
       <li>2021</li>
         <ul>
+          <li>Jannicke Baalsrud Hauge, Masoud Zafarzadeh, <b>Yongkuk Jeong</b>, Yi Li, Wajid Ali Khilji, Christian Larsen, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">Digital twin testbed and practical applications in production logistics with real-time location data</span>, International Journal of Industrial Engineering and Management, 12(2)  <a href="http://doi.org/10.24867/IJIEM-2021-2-282">[Link: Paper]</a></li>
           <li>Jong Hun Woo, Haoyu Zhu, Dong Kun Lee, Hyun Chung, and <b>Yongkuk Jeong</b> (2021), <span style="color:#1d6ab8">Assessment Framework of Smart Shipyard Maturity Level via Data Envelopment Analysis</span>, Sustainability, 13(4)  <a href="https://doi.org/10.3390/su13041964">[Link: Paper]</a></li>
 			  </ul>
       <li>2020</li>
@@ -87,8 +89,16 @@
 			    <li>Dong Kun Lee, Jong Gye Shin, Youngmin Kim, and <b>Yong Kuk Jeong</b>, (2014), <span style="color:#1d6ab8">Simulation-based Work Plan Verification in Shipyards</span>, Journal of Ship Production and Design, 30(2), pp. 49-57 <a href="https://www.onepetro.org/journal-paper/SNAME-JSPD-2014-30-2-49">[LINK: Paper]</a></li>
         </ul>
     </ul>
-		<h3><a id="conference-international" class="anchor" href="#conference-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (International)</h3>
+		<h3><a id="conference-international" class="anchor" href="#conference-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference</h3>
 		<ul>
+      <li>2021</li>
+        <ul><!--
+          <li>Erik Flores-García, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, Sichao Liu, Lihui Wang, and GooYoung Kim (2021), <span style="color:#1d6ab8">Digital twin-based services for smart production logistics</span>, WSC 2021, Phoenix, AZ, USA, 13-15 December, 2021</li>
+           <li><b>Yongkuk Jeong</b>, Tarun Kumar Agrawal, Erik Flores-García, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">A reinforcement learning model for material handling task assignment and route planning in dynamic production logistics environment</span>, CIRP CMS 2021, Online, 22-24 September, 2021</li>
+           <li>Erik Flores-García, <b>Yongkuk Jeong</b>, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">Applying Machine Learning for Adaptive Scheduling and Execution of Material Handling in Smart Production Logistics</span>, APMS 2021, Nates, France (Online), 5-9 September, 2021</li>-->
+           <li>Amita Singh, <b>Yongkuk Jeong</b>, Jannicke Baalsrud Hauge, and Seyoum Eshetu Birkie (2021), <span style="color:#1d6ab8">Urban production logistics planning considering environmental sustainability perspectives: Turku city case</span>, ISL 2021, Online, 12-13 July, 2021</li>
+          <li>Erik Flores-García, <b>Yongkuk Jeong</b>, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">Exploring the challenges for generating, handling, and using real-time location information in Smart Production Logistics</span>, EurOMA 2021, Online, 5-7 July, 2021</li>
+        </ul>
       <li>2020</li>
         <ul>
           <li><b>Yongkuk Jeong</b>, Erik Flores-García, and Magnus Wiktorsson (2020), <span style="color:#1d6ab8">A Design of Digital Twins for Supporting Decision-making in Production Logistics</span>, WSC 2020, Orlando, Florida, USA (Online), 14-18 December, 2020 <a href="https://informs-sim.org/wsc20papers/277.pdf">[LINK: Paper]</a> <a href="https://youtu.be/hcBWFXwF8H4">[LINK: Presentation]</a></li>
