--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		<ul>
       <li>2021</li>
         <ul>
+			<li>Jannicke Baalsrud Hauge, Seyoum Eshetu Birkie, and <b>Yongkuk Jeong</b> (2021), <span style="color:#1d6ab8">Developing a holistic decision support framework: From production logistics to sustainable freight transport in an urban environment</span>, Transportation Research Interdisciplinary Perspectives, 12 <a href="https://doi.org/10.1016/j.trip.2021.100496">[Link: Paper]</a></li>
 			<li>Jannicke Baalsrud Hauge, Masoud Zafarzadeh, <b>Yongkuk Jeong</b>, Yi Li, Wajid Ali Khilji, Christian Larsen, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">Digital twin testbed and practical applications in production logistics with real-time location data</span>, International Journal of Industrial Engineering and Management, 12(2)  <a href="http://doi.org/10.24867/IJIEM-2021-2-282">[Link: Paper]</a></li>
 			<li>Huiqiang Shen, Yonggil Lee, <b>Yong-Kuk Jeong</b>, and Jong Hun Woo (2021), <span style="color:#1d6ab8">Analysis on Hull Block Erection Process Considering Variability</span>, Journal of Ship Production and Design, 37(2) <a href="https://doi.org/10.5957/JSPD.07190036">[Link: Paper]</a></li>
 			<li>Jong Hun Woo, Haoyu Zhu, Dong Kun Lee, Hyun Chung, and <b>Yongkuk Jeong</b> (2021), <span style="color:#1d6ab8">Assessment Framework of Smart Shipyard Maturity Level via Data Envelopment Analysis</span>, Sustainability, 13(4)  <a href="https://doi.org/10.3390/su13041964">[Link: Paper]</a></li>
