--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 		<ul>
       <li>2021</li>
         <ul>
-          <!--<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, Sichao Liu, Lihui Wang, and GooYoung Kim (2021), <span style="color:#1d6ab8">Digital twin-based services for smart production logistics</span>, WSC 2021, Phoenix, AZ, USA, 13-15 December, 2021</li>-->
-           <li><b>Yongkuk Jeong</b>, Tarun Kumar Agrawal, Erik Flores-García, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">A reinforcement learning model for material handling task assignment and route planning in dynamic production logistics environment</span>, CIRP CMS 2021, Online, 22-24 September, 2021</li>
-           <li>Erik Flores-García, <b>Yongkuk Jeong</b>, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">Applying Machine Learning for Adaptive Scheduling and Execution of Material Handling in Smart Production Logistics</span>, APMS 2021, Nates, France (Online), 5-9 September, 2021</li>
-           <li>Amita Singh, <b>Yongkuk Jeong</b>, Jannicke Baalsrud Hauge, and Seyoum Eshetu Birkie (2021), <span style="color:#1d6ab8">Urban production logistics planning considering environmental sustainability perspectives: Turku city case</span>, ISL 2021, Online, 12-13 July, 2021</li>
-          <li>Erik Flores-García, <b>Yongkuk Jeong</b>, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">Exploring the challenges for generating, handling, and using real-time location information in Smart Production Logistics</span>, EurOMA 2021, Online, 5-7 July, 2021</li>
+        	<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, Sichao Liu, Lihui Wang, and GooYoung Kim (2021), <span style="color:#1d6ab8">Digital twin-based services for smart production logistics</span>, WSC 2021, Phoenix, AZ, USA, 13-15 December, 2021</li>
+           	<li><b>Yongkuk Jeong</b>, Tarun Kumar Agrawal, Erik Flores-García, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">A reinforcement learning model for material handling task assignment and route planning in dynamic production logistics environment</span>, CIRP CMS 2021, Online, 22-24 September, 2021</li>
+           	<li>Erik Flores-García, <b>Yongkuk Jeong</b>, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">Applying Machine Learning for Adaptive Scheduling and Execution of Material Handling in Smart Production Logistics</span>, APMS 2021, Nates, France (Online), 5-9 September, 2021</li>
+           	<li>Amita Singh, <b>Yongkuk Jeong</b>, Jannicke Baalsrud Hauge, and Seyoum Eshetu Birkie (2021), <span style="color:#1d6ab8">Urban production logistics planning considering environmental sustainability perspectives: Turku city case</span>, ISL 2021, Online, 12-13 July, 2021</li>
+          	<li>Erik Flores-García, <b>Yongkuk Jeong</b>, and Magnus Wiktorsson (2021), <span style="color:#1d6ab8">Exploring the challenges for generating, handling, and using real-time location information in Smart Production Logistics</span>, EurOMA 2021, Online, 5-7 July, 2021</li>
         </ul>
       <li>2020</li>
         <ul>
