--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
 		<ul>
+		<li>2022</li>
+		<ul>
+			<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Sichao Liu, Magnus Wiktorsson, and Lihui Wang, <span style="color:#1d6ab8">Enabling Industiral Internet of Things-based Digital Servitization in Smart Production Logistics</span>, International Journal of Production Research (accepted)</li>
+		</ul>>
       <li>2021</li>
         <ul>
 			<li>Jannicke Baalsrud Hauge, Seyoum Eshetu Birkie, and <b>Yongkuk Jeong</b> (2021), <span style="color:#1d6ab8">Developing a holistic decision support framework: From production logistics to sustainable freight transport in an urban environment</span>, Transportation Research Interdisciplinary Perspectives, 12 <a href="https://doi.org/10.1016/j.trip.2021.100496">[Link: Paper]</a></li>
