--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 		</ul>
 		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
 		<ul>
-      <li>Course Responsible & Teacher (ML2303 Digitalisation in Sustainable Production), KTH Royal Institute of Technology, Sweden, 2021</li>
-      <li>Course Responsible & Teacher (ML2302 Modelling, Simulation and Optimization of Sustainable Production), KTH Royal Institute of Technology, Sweden, 2021</li>
+      <li>Course Responsible & Teacher (ML2303 Digitalisation in Sustainable Production), KTH Royal Institute of Technology, Sweden, 2021, 2022 <a href="https://www.kth.se/student/kurser/kurs/ML2303?l=en">[LINK]</a></li>
+      <li>Course Responsible & Teacher (ML2302 Modelling, Simulation and Optimization of Sustainable Production), KTH Royal Institute of Technology, Sweden, 2021, 2022 <a href="https://www.kth.se/student/kurser/kurs/ML2302?l=en">[LINK]</a></li>
       <li>Teacher (ML2303 Digitalisation in Sustainable Production), KTH Royal Institute of Technology, Sweden, 2020</li>
       <li>Teacher (ML2302 Modelling, Simulation and Optimization of Sustainable Production), KTH Royal Institute of Technology, Sweden, 2020</li>
       <li>Lecturer (Ship production design), Inha Technical College, South Korea, 2018</li>
@@ -59,7 +59,7 @@
 		<ul>
 		<li>2022</li>
 		<ul>
-			<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Sichao Liu, Magnus Wiktorsson, and Lihui Wang, <span style="color:#1d6ab8">Enabling Industiral Internet of Things-based Digital Servitization in Smart Production Logistics</span>, International Journal of Production Research (accepted)</li>
+			<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Sichao Liu, Magnus Wiktorsson, and Lihui Wang, <span style="color:#1d6ab8">Enabling Industrial Internet of Things-based Digital Servitization in Smart Production Logistics</span>, International Journal of Production Research (accepted)</li>
 		</ul>>
       <li>2021</li>
         <ul>
@@ -96,6 +96,12 @@
     </ul>
 		<h3><a id="conference-international" class="anchor" href="#conference-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference</h3>
 		<ul>
+			<li>2022</li>
+			<ul>
+				<li><b>Yongkuk Jeong</b> and Erik Flores-García (2022), <span style="color:#1d6ab8">Cyber-Physical system as a service for the manufacturing industry - collaboration work between Sweden and South Korea</span>, The Swedish Manufacturing R&D Clusters’ Annual Conference, Katrineholm, Sweden, 18-19 May, 2022</li>
+				<li><b>Yongkuk Jeong</b>, Gianpiero Canessa, Erik Flores-García, Tarun Kumar Agrawal, and Magnus Wiktorsson (2022), <span style="color:#1d6ab8">An optimization model with stochastic variables for flexible production logistics planning</span>, SPS 2022, Skövde, Sweden, 26-29 April, 2022</li>
+				<li>Erik Flores-García, Maheshwaran Gopalakrishnan, <b>Yongkuk Jeong</b> and Magnus Wiktorsson (2022), <span style="color:#1d6ab8">IIoT-enabled Digital Services for Maintenance Planning in Smart Production Logistics using Maintenance Opportunity Window</span>, SPS 2022, Skövde, Sweden, 26-29 April, 2022</li>		
+			</ul>
       <li>2021</li>
         <ul>
         	<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, Sichao Liu, Lihui Wang, and GooYoung Kim (2021), <span style="color:#1d6ab8">Digital twin-based services for smart production logistics</span>, WSC 2021, Phoenix, AZ, USA, 13-15 December, 2021</li>
