add year information

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<ul>
 				<li>2022</li>
 				<ul>
-					<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Sichao Liu, Magnus Wiktorsson, and Lihui Wang, <span style="color:#1d6ab8">Enabling Industrial Internet of Things-based Digital Servitization in Smart Production Logistics</span>, International Journal of Production Research <a href="https://doi.org/10.1080/00207543.2022.2081099">[Link: Paper]</a></li>
+					<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Sichao Liu, Magnus Wiktorsson, and Lihui Wang (2022), <span style="color:#1d6ab8">Enabling Industrial Internet of Things-based Digital Servitization in Smart Production Logistics</span>, International Journal of Production Research <a href="https://doi.org/10.1080/00207543.2022.2081099">[Link: Paper]</a></li>
 				</ul>
 				<li>2021</li>
 				<ul>
