department name has changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h1 class="project-name">Yongkuk Jeong</h1>
 			<h2 class="project-tagline">yongkuk at kth.se</h2>
 			<img src="img/YKJeong.png" width="150" alt="Yongkuk Jeong"/>
-			<h2 class="project-tagline">Assistant Professor in Production Logistics<br>Department of Sustainable Production Development<br>KTH Royal Institute of Technology, Sweden</h2>
+			<h2 class="project-tagline">Assistant Professor in Production Logistics<br>Department of Production Engineering<br>KTH Royal Institute of Technology, Sweden</h2>
 		</section>
 		<section class="main-content">
 			<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
@@ -28,7 +28,7 @@
 			</ul>
 			<h3><a id="employment" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Employment</h3>
 			<ul>
-				<li>Assistant Professor, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2021-now</li>
+				<li>Assistant Professor, Department of Production Engineering, KTH Royal Institute of Technology, Sweden, 2021-now</li>
 				<li>Postdoc, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2019-2021</li>
 				<li>Postdoctoral Researcher, Research Institute of Marine Systems Engineering, Seoul National University, South Korea, 2018-2019</li>
 			</ul>
@@ -46,12 +46,9 @@
 			</ul>		
 			<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 			<ul>
-				<li>Production logistics</li>
+				<li>Digitalization in production logistics</li>
 				<li>Manufacturing simulation</li>
-				<li>Ship production system</li>
 				<li>Discrete event system simulation</li>
-				<li>Life cycle assessment</li>
-				<li>Combinatorial optimization algorithm</li>
 			</ul>
 			<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
 			<ul>
