--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 			<ul>
 				<li>2022</li>
 				<ul>
+					<li>Amita Singh, Erik Flores Garcia, <b>Yongkuk Jeong</b>, Magnus Wiktorsson (2022), <span style="color:#1d6ab8">A Rubric for Implementing Explainable AI in Production Logistics</span>, APMS 2022, Gyeongju, South Korea, 25-29 September, 2022</li>
+					<li><b>Yongkuk Jeong</b>, Erik Flores-García, Dong Hoon Kwak, Jong Hun Woo, Magnus Wiktorsson, Sichao Liu, Xi Vincent Wang, and Lihui Wang (2022), <span style="color:#1d6ab8">Digital Twin-Based Services and Data Visualization of Material Handling Equipment in Smart Production Logistics Environment</span>, APMS 2022, Gyeongju, South Korea, 25-29 September, 2022</li>
+					<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, Dong Hoon Kwak, Jong Hun Woo, Thomas Schmitt, and Lars Hanson (2022), <span style="color:#1d6ab8">Characterizing Digital Dashboards for Smart Production Logistics</span>, APMS 2022, Gyeongju, South Korea, 25-29 September, 2022</li>
+					<li>Jannicke Baalsrud Hauge and <b>Yongkuk Jeong</b> (2022), <span style="color:#1d6ab8">A step-by-step guideline to overcome challenges modelling urban logistics scenarios using SUMO</span>, ISL 2022, Cork, Ireland, 10-13 July, 2022</li>					
 					<li><b>Yongkuk Jeong</b> and Erik Flores-García (2022), <span style="color:#1d6ab8">Cyber-Physical system as a service for the manufacturing industry - collaboration work between Sweden and South Korea</span>, The Swedish Manufacturing R&D Clusters’ Annual Conference, Katrineholm, Sweden, 18-19 May, 2022</li>
 					<li><b>Yongkuk Jeong</b>, Gianpiero Canessa, Erik Flores-García, Tarun Kumar Agrawal, and Magnus Wiktorsson (2022), <span style="color:#1d6ab8">An optimization model with stochastic variables for flexible production logistics planning</span>, SPS 2022, Skövde, Sweden, 26-29 April, 2022</li>
 					<li>Erik Flores-García, Maheshwaran Gopalakrishnan, <b>Yongkuk Jeong</b> and Magnus Wiktorsson (2022), <span style="color:#1d6ab8">IIoT-enabled Digital Services for Maintenance Planning in Smart Production Logistics using Maintenance Opportunity Window</span>, SPS 2022, Skövde, Sweden, 26-29 April, 2022</li>		
