--- a/playground/schedule.html
+++ b/playground/schedule.html
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -19,10 +13,10 @@
     <h1>Optimal Route Finder</h1>
     <form id="address-form">
       <label for="origin-url">Origin URL:</label>
-      <input type="text" id="origin-url" name="origin-url" required>
+      <input type="text" id="origin-url" name="origin-url" required value="https://www.hemnet.se/bostad/lagenhet-2rum-aspudden-stockholms-kommun-erik-segersalls-vag-1%5C%5C,-van-2-av-3-19702575">
       <br>
       <label for="destination-url">Destination URL:</label>
-      <input type="text" id="destination-url" name="destination-url" required>
+      <input type="text" id="destination-url" name="destination-url" required value="https://www.hemnet.se/bostad/lagenhet-2rum-aspudden-stockholms-kommun-pilgrimsvagen-54d-19790583">
       <br>
       <input type="submit" value="Find Optimal Route">
     </form>
