--- a/playground/schedule.html
+++ b/playground/schedule.html
@@ -7,6 +7,9 @@
         height: 500px;
         width: 100%;
       }
+      body {
+        font-family: Arial, sans-serif;
+    }  
     </style>
   </head>
   <body>
