--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<section class="page-header">
 			<h1 class="project-name">Yongkuk Jeong</h1>
 			<h2 class="project-tagline">yongkuk at kth.se</h2>
-			<a href="playground/artwork.html"><img src="img/YKJeong.png" width="150" alt="Yongkuk Jeong"/></a>
+			<a href="playground/artwork6.html"><img src="img/YKJeong.png" width="150" alt="Yongkuk Jeong"/></a>
 			<h2 class="project-tagline">Assistant Professor in Production Logistics<br>Department of Production Engineering<br>KTH Royal Institute of Technology, Sweden</h2>
 		</section>
 		<section class="main-content">
