--- a/playground/index.html
+++ b/playground/index.html
@@ -66,9 +66,9 @@
             <article class="project">
                 <a href="artwork8.html" target="_blank">
                     <img src="project3-image.jpg" alt="Project 3">
-                    <h2>TITLE</h2>
+                    <h2>Manufacturing Inspired Generative Art</h2>
                 </a>
-                <p>TEXT</p>
+                <p>This webpage presents a captivating, dynamic generative art piece that takes inspiration from manufacturing processes. Featuring an array of colorful lines that constantly shift and change positions, the artwork creates an immersive visual experience set against a dark gray background.</p>
             </article>
             <article class="project">
                 <a href="artwork9.html" target="_blank">
