--- a/playground/processmining.html
+++ b/playground/processmining.html
@@ -33,9 +33,11 @@
         // Sample data
         var nodes = [
             { name: "Start", x: 100, y: 200 },
+            { name: "Activity X", x: 200, y: 200 },
             { name: "Activity A", x: 300, y: 100 },
             { name: "Activity B", x: 300, y: 300 },
             { name: "Activity C", x: 500, y: 200 },
+            { name: "Activity D", x: 600, y: 200 },
             { name: "End", x: 700, y: 200 }
         ];
 
@@ -44,19 +46,33 @@
             { source: 0, target: 2 },
             { source: 1, target: 3 },
             { source: 2, target: 3 },
-            { source: 3, target: 4 }
+            { source: 3, target: 4 },
+            { source: 4, target: 5 },
+            { source: 5, target: 6 }
         ];
 
         // Event logs and start times
         var eventLogs = [
-            [0, 1, 3, 4],  // Event Log 1
+            [0, 1, 3, 1,2,4],  // Event Log 1
             [0, 2, 3, 4],   // Event Log 2
-            [0, 2, 3, 4],
-            [0, 2, 3, 4],
-            [0, 2, 3, 4],
-            [0, 2, 3, 4],
-            [0, 2, 3, 4],
+            [0, 2, 1,3, 4],
+            [0, 2, 3, 2,4],
+            [0, 2, 3, 1,4],
+            [0, 2, 3, 0,4],
+            [0, 2, 3, 2,4],
+            [0, 1, 3, 1,2,1,2,1,2,1,2,1,2,4],  // Event Log 1
             [0, 1, 3, 4],  // Event Log 1
+            [0, 1, 3, 4],  // Event Log 1
+            [0, 1, 3, 4],  // Event Log 1
+            [0, 1, 3, 4],  // Event Log 1
+            [0, 1, 3, 1,2,4],  // Event Log 1
+            [0, 2, 3, 4],   // Event Log 2
+            [0, 2, 1,3, 4],
+            [0, 2, 3, 2,4],
+            [0, 2, 3, 1,4],
+            [0, 2, 3, 0,4],
+            [0, 2, 3, 2,4],
+            [0, 1, 3, 1,2,1,2,1,2,1,2,1,2,4],  // Event Log 1
             [0, 1, 3, 4],  // Event Log 1
             [0, 1, 3, 4],  // Event Log 1
             [0, 1, 3, 4],  // Event Log 1
@@ -66,17 +82,29 @@
 
         var startTimes = [
             0,      // Event Log 1 starts immediately
-            1000,    // Event Log 2 starts after 2 seconds
-            2000,
-            2000,
-            2000,
-            2000,
-            2000,
-            2000,
-            2000,
-            3000,
-            4000,
-            5000
+            100,    // Event Log 2 starts after 2 seconds
+            200,
+            200,
+            200,
+            200,
+            200,
+            200,
+            200,
+            300,
+            400,
+            500,
+            0,      // Event Log 1 starts immediately
+            100,    // Event Log 2 starts after 2 seconds
+            200,
+            200,
+            200,
+            200,
+            200,
+            200,
+            200,
+            300,
+            400,
+            500
         ];
 
         // Calculate the number of events for each node
@@ -132,7 +160,7 @@
                 .attr("r", 7)
                 .attr("cx", nodes[eventLog[0]].x)
                 .attr("cy", nodes[eventLog[0]].y)
-                .attr("fill", i === 0 ? "red" : "blue");  // Different colors for different event logs
+                .attr("fill", (d, i) => i % 2 === 0 ? "red" : "blue");  // Alternate colors for different event logs
         });
 
     // Draw the bars
