--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 			</ul>
 			<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
 			<ul>
-				<li>Course Responsible & Teacher (ML2303 Digitalisation in Sustainable Production), KTH Royal Institute of Technology, Sweden, 2020, 2021, 2022 <a href="https://www.kth.se/student/kurser/kurs/ML2303?l=en">[LINK]</a></li>
-				<li>Course Responsible & Teacher (ML2302 Modelling, Simulation and Optimization of Sustainable Production), KTH Royal Institute of Technology, Sweden, 2020, 2021, 2022 <a href="https://www.kth.se/student/kurser/kurs/ML2302?l=en">[LINK]</a></li>
+				<li>Course Responsible & Teacher (ML2303 Digitalisation in Sustainable Production), KTH Royal Institute of Technology, Sweden, 2020, 2021, 2022, 2023 <a href="https://www.kth.se/student/kurser/kurs/ML2303?l=en">[LINK]</a></li>
+				<li>Course Responsible & Teacher (ML2302 Modelling, Simulation and Optimization of Sustainable Production), KTH Royal Institute of Technology, Sweden, 2020, 2021, 2022, 2023 <a href="https://www.kth.se/student/kurser/kurs/ML2302?l=en">[LINK]</a></li>
 				<li>Lecturer (Ship production design), Inha Technical College, South Korea, 2018</li>
 				<li>Lecturer (Introduction to ship production engineering), Inha Technical College, South Korea, 2018</li>
 			</ul>		
@@ -52,9 +52,10 @@
 			</ul>
 			<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
 			<ul>
-				<li>2022</li>
+				<li>2023</li>
 				<ul>
-					<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Sichao Liu, Magnus Wiktorsson, and Lihui Wang (2022), <span style="color:#1d6ab8">Enabling Industrial Internet of Things-based Digital Servitization in Smart Production Logistics</span>, International Journal of Production Research <a href="https://doi.org/10.1080/00207543.2022.2081099">[Link: Paper]</a></li>
+					<li><b>Yongkuk Jeong</b> (2023), <span style="color:#1d6ab8">Digitalization in Production Logistics: How AI, Digital Twins, and Simulation Are Driving the Shift from Model-based to Data-driven Approaches</span>, International Journal of Precision Engineering and Manufacturing-Smart Technology, 1(2) <a href="https://doi.org/10.57062/ijpem-st.2023.0052">[Link: Paper]</a></li>
+					<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Sichao Liu, Magnus Wiktorsson, and Lihui Wang (2023), <span style="color:#1d6ab8">Enabling Industrial Internet of Things-based Digital Servitization in Smart Production Logistics</span>, International Journal of Production Research, 61(12) <a href="https://doi.org/10.1080/00207543.2022.2081099">[Link: Paper]</a></li>
 				</ul>
 				<li>2021</li>
 				<ul>
@@ -91,9 +92,14 @@
 			</ul>
 			<h3><a id="conference-international" class="anchor" href="#conference-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference</h3>
 			<ul>
+				<li>2023</li>
+				<ul>
+					<li><b>Yongkuk Jeong</b> and Jannicke Baalsrud Hauge (2023), <span style="color:#1d6ab8">Digitalization in production logistics towards Industry 5.0: Anaylsis of industrial project cases</span>, ISL 2023, Enschede, Netherlands, 9-12 July, 2023</li>
+					<li><b>Yongkuk Jeong</b>, Tarun Kumar Agrawal, and Kiwook Jung (2023), <span style="color:#1d6ab8">Digital servitization in battery reuse and recycling business based on blockchain platform technologies</span>, EurOMA 2023, Leuven, Belgium, 3-5 July, 2023</li>
+				</ul>
 				<li>2022</li>
 				<ul>
-					<li>Amita Singh, Erik Flores Garcia, <b>Yongkuk Jeong</b>, Magnus Wiktorsson (2022), <span style="color:#1d6ab8">A Rubric for Implementing Explainable AI in Production Logistics</span>, APMS 2022, Gyeongju, South Korea, 25-29 September, 2022</li>
+					<li>Amita Singh, Erik Flores Garcia, <b>Yongkuk Jeong</b>, and Magnus Wiktorsson (2022), <span style="color:#1d6ab8">A Rubric for Implementing Explainable AI in Production Logistics</span>, APMS 2022, Gyeongju, South Korea, 25-29 September, 2022</li>
 					<li><b>Yongkuk Jeong</b>, Erik Flores-García, Dong Hoon Kwak, Jong Hun Woo, Magnus Wiktorsson, Sichao Liu, Xi Vincent Wang, and Lihui Wang (2022), <span style="color:#1d6ab8">Digital Twin-Based Services and Data Visualization of Material Handling Equipment in Smart Production Logistics Environment</span>, APMS 2022, Gyeongju, South Korea, 25-29 September, 2022</li>
 					<li>Erik Flores-García, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, Dong Hoon Kwak, Jong Hun Woo, Thomas Schmitt, and Lars Hanson (2022), <span style="color:#1d6ab8">Characterizing Digital Dashboards for Smart Production Logistics</span>, APMS 2022, Gyeongju, South Korea, 25-29 September, 2022</li>
 					<li>Jannicke Baalsrud Hauge and <b>Yongkuk Jeong</b> (2022), <span style="color:#1d6ab8">A step-by-step guideline to overcome challenges modelling urban logistics scenarios using SUMO</span>, ISL 2022, Cork, Ireland, 10-13 July, 2022</li>					
