--- a/wedding/index.html
+++ b/wedding/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Tian & Yongkuk</title>
+    <title>Tian & Yongkuk 231223</title>
     <meta content="Tian & Yongkuk" name="description"/>
     <meta property="og:image" content="images/pic2.jpeg">
     <meta property="fb:app_id" content="781066922265598" />
@@ -101,8 +101,9 @@
                     </p>
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
-                        <b style="font-size:1.4em;">December 23, 2023 SAT PM 18:30</b>
-                        <br>Seoul Sky building
+                        <b style="font-size:1.4em;">2023년 12월 23일 (토) 저녁 6시</b>
+                        <br>
+                        <br>여의도 63빌딩 워킹온더클라우드
                     </p>
                 </div>
             </div>
@@ -128,19 +129,21 @@
         </div>
         <div class="ww-section" id="couple">
             <div class="container">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Bride and groom</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">신랑 & 신부</h2>
                 <div class="row text-center">
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                Tian Qiu</h3>
+                                <!--Tian Qiu 邱天 초우 티안</h3>-->
+                                邱天 Qiu, Tian</h3>
                             <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                Yongkuk Jeong</h3>
+                                <!--Yongkuk Jeong 정용국 鄭用國</h3>-->
+                                정용국 Jeong, Yongkuk</h3>
                             <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
                         </div>
                     </div>
@@ -149,7 +152,7 @@
         </div>
         <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">We invite you</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;"></h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
                             some text here<br>
@@ -167,7 +170,7 @@
                                 </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt"></i>
-                                    <span class="pl-2 text-muted">December 23, 2023 SAT PM 18:30</span>
+                                    <span class="pl-2 text-muted">2023년 12월 23일 (토) 저녁 6시</span>
                                 </li>
                             </ul>
                         </div>
@@ -184,7 +187,7 @@
         <div class="ww-section" id="gallery">
             <div class="ww-photo-gallery">
                 <div class="container">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">포토 갤러리</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Photo gallery</h2>
                     <div class="ww-gallery">
                         <div class="card-columns">
                             <div class="card" data-groups="[&quot;party&quot;,&quot;wedding&quot;]">
@@ -238,7 +241,7 @@
                             가까이 두어 오래도록 아껴 쓰고,<br>
                             소중하게 간직하겠습니다.
                             <br><br>
-                            (아래 선물버튼을 눌러 신랑, 신부에게 예약메시지를 보내세요!)
+                            신한 110 330 548693
                         </h6>
                     </div>
                     <div class="ww-gift">
@@ -320,36 +323,31 @@
         <div class="ww-section ww-rsvp-detail" id="map">
             <div class="container">
                 <div class="col text-center">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Venue</h2>
                     <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;">센텀사이언스파크웨딩홀 23층 스카이홀</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">(부산 해운대구 센텀중앙로 79)</h6>
+                        <h5 style="font-family: 'Noto Serif KR', serif;">여의도 63빌딩 워킹온더클라우드</h5>
+                        <h6 style="font-family: 'Noto Serif KR', serif;">(서울 영등포구 63로 50)</h6>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-md-12">
                         <div class="my-3 text-center">
-                            <a href="http://naver.me/5pTy3HCa">
+                            <a href="https://naver.me/xuICPadY">
                                 <img alt="naver-map" class="map-icon" id="naver-map"
                                      src="images/map/naver-map.png"/>
                             </a>
-                            <a href="http://dmaps.kr/2bms8">
+                            <a href="https://kko.to/WcPAmHnCr2">
                                 <img alt="kakao-map" class="map-icon" id="kakao-map"
                                      src="images/map/kakao-map.png"/>
                             </a>
-                            <a href="https://maps.app.goo.gl/jfDxw">
+                            <a href="https://maps.app.goo.gl/zMLZecTuPqdkRuWU7">
                                 <img alt="google-map" class="map-icon" id="google-map"
                                      src="images/map/google-map.png"/>
                             </a>
                         </div>
-                        <div class="col text-center">
-                            <label style="font-family: 'Noto Serif KR', serif; font-size: 15px;">
-                                셔틀버스 - 센텀시티역 4번출구앞에서 15분 간격으로 운행
-                            </label>
-                        </div>
                         <div class="my-3">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.297439052569!2d129.1238775160104!3d35.1741384652207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c2513ecf5d%3A0x7d362ece2091e2f8!2z7IS87YWA7IKs7J207Ja47Iqk7YyM7YGsIOy7qOuypOyFmO2ZgA!5e0!3m2!1sko!2skr!4v1554092125630!5m2!1sko!2skr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJoSHsdB-jfDURN2sEPnaiYLM&key=AIzaSyCH29XOuJOFsVT1MARnN1LVGgkVfhZKwwc" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -357,7 +355,7 @@
 
             </div>
         </div>
-
+<!--
         <div class="ww-section bg-light" id="comment">
             <div class="ww-photo-gallery">
                 <div class="container">
@@ -373,7 +371,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
     </div>
 </div>
