--- a/wedding/index.html
+++ b/wedding/index.html
@@ -93,10 +93,10 @@
         </div>
         <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">초대합니다</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">결혼합니다!</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
-                            각자 다른 나라에서 태어난 저희 두 사람이 스웨덴에서 만나 이제 하나가 되어 한길을 걷고자 합니다.<br>
+                            서로 다른 나라에서 태어난 저희 두 사람이 스웨덴에서 만나 이제 하나가 되어 한 길을 걷고자 합니다.<br>
                             감사한 분들을 모시고 기쁨을 나누는 것이 도리이지만, 저희 두 사람과 양가 부모님의 뜻에 따라</br>
                             간소하게 서약을 맺고자 합니다. 너그러운 마음으로 먼 곳에서라도 축하와 격려를 보내주시면 감사하겠습니다.
                         </h6>
@@ -104,7 +104,7 @@
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">Wedding day</div>
+                            <div class="h4">결혼식</div>
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt"></i>
