--- a/wedding/index_eng.html
+++ b/wedding/index_eng.html
@@ -41,9 +41,9 @@
                     </p>
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
-                        <b style="font-size:1.4em;">2023년 12월 23일 (토) 저녁 6시</b>
+                        <b style="font-size:1.4em;">December 23, 2023 (Saturday), 6:00 PM</b>
                         <br>
-                        <br>여의도 63빌딩 워킹온더클라우드
+                        <br>Walking on the Cloud, 63 Building, Yeouido
                     </p>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#gifts">Gift</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#map">Map</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="index_eng.html">ENG</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="index.html">KOR</a></li>
                         </ul>
                     </div>
                 </div>
@@ -71,13 +71,13 @@
         </div>
         <div class="ww-section" id="couple">
             <div class="container">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">신랑 & 신부</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Bride & Groom</h2>
                 <div class="row text-center">
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
                                 <!--Tian Qiu 邱天 초우 티안</h3>-->
-                                邱天 Qiu, Tian</h3>
+                                Tian Qiu</h3>
                             <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
                                 <!--Yongkuk Jeong 정용국 鄭用國</h3>-->
-                                정용국 Jeong, Yongkuk</h3>
+                                Yongkuk Jeong</h3>
                             <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
                         </div>
                     </div>
@@ -94,26 +94,25 @@
         </div>
         <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">결혼합니다!</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">We are getting married!</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
-                            서로 다른 나라에서 태어난 저희 두 사람이 스웨덴에서 만나 이제 하나가 되어 한 길을 걷고자 합니다.<br>
-                            감사한 분들을 모시고 기쁨을 나누는 것이 도리이지만, 저희 두 사람과 양가 부모님의 뜻에 따라</br>
-                            간소하게 서약을 맺고자 합니다. 너그러운 마음으로 먼 곳에서라도 축하와 격려를 보내주시면 감사하겠습니다.
+                            Although we were born in different countries, we met in Sweden and are now becoming one, walking the same path together.<br>
+While it is customary to share our joy with grateful people, according to our will and that of our parents, we intend to make our vows simply.<br>We would appreciate your congratulations and encouragement from afar with understanding hearts.
                         </h6>
                     </div>
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">결혼식</div>
+                            <div class="h4">Wedding ceremony</div>
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt"></i>
-                                    <span class="pl-2 text-muted">여의도 63빌딩 워킹온더클라우드</span>
+                                    <span class="pl-2 text-muted">Walking on the Cloud, 63 Building, Yeouido</span>
                                 </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt"></i>
-                                    <span class="pl-2 text-muted">2023년 12월 23일 (토) 저녁 6시</span>
+                                    <span class="pl-2 text-muted">December 23, 2023 (Saturday), 6:00 PM</span>
                                 </li>
                             </ul>
                         </div>
@@ -176,11 +175,11 @@
                         wedding</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
-                            많은 분들을 직접 찾아뵙지 못하고 연락만 드리는 점 양해 부탁 드리며,<br>
-                            애정 어린 마음으로 저희 부부를 격려해주시면 감사하겠습니다.<br> 
+                            We apologize for not being able to visit many of you in person and only reaching out via communication.<br>
+                            We would be grateful if you could encourage us as a couple with your warm hearts.<br> 
                             <br>
-                            <b>마음 전하실 곳</b> 신한 110 330 548693<br>
-                            <b>축하 메시지</b> 신랑 <a href="mailto:jake8967@hotmail.com">이메일</a> 신부 <a href="mailto:catherineqiu_518@hotmail.com">이메일</a><br>
+                            <b>Swish</b> 073 631 83 91<br>
+                            <b>Email to</b> <a href="mailto:jake8967@hotmail.com">Groom</a> and <a href="mailto:catherineqiu_518@hotmail.com">Bride</a><br>
                             
                         </h6>
                     </div>
@@ -190,10 +189,9 @@
         <div class="ww-section ww-rsvp-detail" id="map">
             <div class="container">
                 <div class="col text-center">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">찾아오시는 길</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Venue</h2>
                     <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;">여의도 63빌딩 워킹온더클라우드</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">(서울 영등포구 63로 50)</h6>
+                        <h5 style="font-family: 'Noto Serif KR', serif;">Walking on the Cloud, 63 Building, Yeouido</h5>
                     </div>
                 </div>
 
