--- a/wedding/index_a.html
+++ b/wedding/index_a.html
@@ -99,8 +99,8 @@
                 <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">저희 결혼합니다!</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
-                            서로 다른 장소, 문화, 환경에서 자란 저희 두 사람이 <br>이제 하나가 되어 한 길을 걷고자 합니다.<br>
-                            감사한 분들을 모시고 기쁨을 나누는 것이 도리이지만, <br>저희 두 사람과 양가 부모님의 뜻에 따라 <br>간소하게 서약을 맺고자 합니다. <br>
+                            서로 다른 장소, 문화, 환경에서 자란 <br> 저희 두 사람이 이제 하나가 되어<br> 한 길을 걷고자 합니다.<br>
+                            감사한 분들을 모시고 기쁨을 나누는 것이 <br>도리이지만, 저희 두 사람과 <br>양가 부모님의 뜻에 따라 <br>간소하게 서약을 맺고자 합니다. <br>
                             너그러운 마음으로 먼 곳에서라도 <br>축하와 격려를 보내주시면 감사하겠습니다. <br></h6>
                             <h6 style="font-family: 'Noto Serif KR', serif;">
                             <b>마음 전하실 곳</b> 신한 110 330 548693<br>
