--- a/wedding/index_a.html
+++ b/wedding/index_a.html
@@ -103,7 +103,7 @@
                             감사한 분들을 모시고 기쁨을 나누는 것이 <br>도리이지만, 저희 두 사람과 <br>양가 부모님의 뜻에 따라 <br>간소하게 서약을 맺고자 합니다. <br>
                             너그러운 마음으로 먼 곳에서라도 <br>축하와 격려를 보내주시면 감사하겠습니다. <br></h6>
                             <h6 style="font-family: 'Noto Serif KR', serif;">
-                            <b>마음 전하실 곳</b> 신한 110 330 548693<br>
+                            <b>마음 전하실 곳</b> 신한 110 330 548693 (정용국)<br>
                             <b>축하 메시지 보내기</b> 신랑 <a href="mailto:jake8967@hotmail.com">💌</a> 신부 <a href="mailto:catherineqiu_518@hotmail.com">💌</a><br>
                         </h6>
                     </div>
