--- a/wedding/index.html
+++ b/wedding/index.html
@@ -97,8 +97,9 @@
                 <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">저희 결혼합니다!</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
-                            서로 다른 환경에서 자란 저희 두 사람이 이제 하나가 되어 한 길을 걷고자 합니다.<br>
-                            간소한 서약을 위한 자리를 마련하였으니 바쁘시겠지만 참석해주시면 감사하겠습니다.
+                            서로 다른 장소, 문화, 환경에서 자란 저희 두 사람이 <br>이제 하나가 되어 한 가정을 이루고자 합니다.<br>
+                            간소한 서약을 위한 자리를 마련하여 가족 어르신들을 초대합니다.<br>
+                            바쁘시더라도 참석하여 자리를 빛내주시면 감사하겠습니다.
                         </h6>
                     </div>
                 <div class="row">
