--- a/wedding/index.html
+++ b/wedding/index.html
@@ -96,9 +96,9 @@
                             간소한 서약을 위한 자리를 마련하여 가족 어르신들을 초대합니다.<br>
                             바쁘시더라도 참석하여 자리를 빛내주시면 감사하겠습니다.<br>
                         </h6>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">
+                        <!--<h6 style="font-family: 'Noto Serif KR', serif;">
                             <b>마음 전하실 곳</b> 신한 110 008 992795 (정하근)<br>
-                        </h6>
+                        </h6>-->
                     </div>
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
