--- a/index.html
+++ b/index.html
@@ -94,8 +94,11 @@
 			<ul>
 				<li>2023</li>
 				<ul>
+					<li>Erik Flores-García, So Hyun Nam, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, and Jong Hun Woo (2023), <span style="color:#1d6ab8">Beyond the Lab: Exploring the Socio-Technical Implications of Machine Learning in Biopharmaceutical Manufacturing</span>, APMS 2023, Trondheim, Norway, 17-21 September, 2023</li>
+					<li><b>Yongkuk Jeong</b>, Magnus Wiktorsson, Donggyun Park, Jesper Gans, and Linda Svensson (2023), <span style="color:#1d6ab8">Data Preparation for AI-Assisted Video Analysis in Manual Assembly Task: A Step Towards Industry 5.0</span>, APMS 2023, Trondheim, Norway, 17-21 September, 2023</li>
 					<li><b>Yongkuk Jeong</b> and Jannicke Baalsrud Hauge (2023), <span style="color:#1d6ab8">Digitalization in production logistics towards Industry 5.0: Anaylsis of industrial project cases</span>, ISL 2023, Enschede, Netherlands, 9-12 July, 2023</li>
 					<li><b>Yongkuk Jeong</b>, Tarun Kumar Agrawal, and Kiwook Jung (2023), <span style="color:#1d6ab8">Digital servitization in battery reuse and recycling business based on blockchain platform technologies</span>, EurOMA 2023, Leuven, Belgium, 3-5 July, 2023</li>
+					<li>Masoud Zafarzadeh, <b>Yongkuk Jeong</b>, Magnus Wiktorsson (2023), <span style="color:#1d6ab8">Data flow structure for multimodal human-robot collaboration in material handling</span>, IEEE ICE/ITMC, Edinburgh, Scotland, 19-22 June, 2023</li></li>
 				</ul>
 				<li>2022</li>
 				<ul>
