--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 			</ul>
 			<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
 			<ul>
+				<li>2024</li>
+				<ul>
+					<li>Jannicke Baalsrud Hauge and <b>Yongkuk Jeong</b> (2024), <span style="color:#1d6ab8">From novice to expert: advancing step-by-step simulation guideline for urban logistics with an open-source simulation tool</span>, The International Journal of Logistics Management, <a href="https://doi.org/10.1108/IJLM-02-2023-0056">[Link: Paper]</a></li>
+				</ul>
 				<li>2023</li>
 				<ul>
 					<li><b>Yongkuk Jeong</b> (2023), <span style="color:#1d6ab8">Digitalization in Production Logistics: How AI, Digital Twins, and Simulation Are Driving the Shift from Model-based to Data-driven Approaches</span>, International Journal of Precision Engineering and Manufacturing-Smart Technology, 1(2) <a href="https://doi.org/10.57062/ijpem-st.2023.0052">[Link: Paper]</a></li>
