--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<li>Google Scholar <a href="https://scholar.google.co.kr/citations?user=y59QYYIAAAAJ&hl=ko">[LINK]</a></li>
 				<li>Scopus <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=56151145200&zone=">[LINK]</a></li>
 				<li>ORCID ID <a href="https://orcid.org/0000-0003-1878-773X">[LINK]</a></li>
-				<li>Curriculum Vitae <a href="docs/Public_CV_Yongkuk Jeong_KTH.pdf">[LINK]</a></li>
+				<li>CV <a href="docs/Public_CV_Yongkuk Jeong_Simple.pdf">[LINK]</a></li>
 			</ul>
 			<h3><a id="employment" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Employment</h3>
 			<ul>
